# rust-private-cli-template

./: AGENTS.md  AGENTS.ts  Cargo.toml  README.md
src/: cli.rs  command.rs  main.rs
src/cli/: command.rs
src/command/: print_command.rs
